add pid_cidr fact

--- a/puppet/modules/cni_plugins/templates/etc/cni/net.d/10-bridge.conf.erb
+++ b/puppet/modules/cni_plugins/templates/etc/cni/net.d/10-bridge.conf.erb
@@ -8,7 +8,7 @@
     "ipam": {
         "type": "host-local",
         "ranges": [
-          [{"subnet": "<%= @facts['ec2_metadata']['subnet-ipv4-cidr-block'] %>"}]
+          [{"subnet": "<%= @pod_cidr %>"}]
         ],
         "routes": [{"dst": "0.0.0.0/0"}]
     }
