First working example

--- a/puppet/modules/etcd/templates/etcd.service.erb
+++ b/puppet/modules/etcd/templates/etcd.service.erb
@@ -19,7 +19,7 @@ ExecStart=/usr/bin/etcd \
   --listen-client-urls https://<%= @ipaddress %>:2379,https://127.0.0.1:2379 \
   --advertise-client-urls https://<%= @ipaddress %>:2379 \
   --initial-cluster-token etcd-cluster-0 \
-  --initial-cluster controller-0=https://10.240.0.10:2380,controller-1=https://10.240.0.11:2380,controller-2=https://10.240.0.12:2380 \
+  --initial-cluster ip-10-240-0-10=https://10.240.0.10:2380,ip-10-240-0-11=https://10.240.0.11:2380,ip-10-240-0-12=https://10.240.0.12:2380 \
   --initial-cluster-state new \
   --data-dir=/var/lib/etcd
 Restart=on-failure
