--- a/puppet/modules/kube_apiserver/templates/kube-apiserver.service.erb
+++ b/puppet/modules/kube_apiserver/templates/kube-apiserver.service.erb
@@ -18,7 +18,7 @@ ExecStart=/usr/bin/kube-apiserver \
   --etcd-cafile=<%= scope.lookupvar('kube_common::conf_dir') %>/ca.pem \
   --etcd-certfile=<%= scope.lookupvar('kube_common::conf_dir') %>/kubernetes.pem \
   --etcd-keyfile=<%= scope.lookupvar('kube_common::conf_dir') %>/kubernetes-key.pem \
-  --etcd-servers=https://10.240.0.10:2379,https://10.240.0.11:2379,https://10.240.0.12:2379 \
+  --etcd-servers=<%= @network_info['controllers'].map { |name, info| "https://#{info['private_ip']}:2379" }.join(',')  %> \
   --event-ttl=1h \
   --encryption-provider-config=<%= scope.lookupvar('kube_common::conf_dir') %>/encryption-config.yaml \
   --kubelet-certificate-authority=<%= scope.lookupvar('kube_common::conf_dir') %>/ca.pem \
@@ -27,7 +27,7 @@ ExecStart=/usr/bin/kube-apiserver \
   --kubelet-https=true \
   --runtime-config='api/all=true' \
   --service-account-key-file=<%= scope.lookupvar('kube_common::conf_dir') %>/service-account.pem \
-  --service-cluster-ip-range=10.32.0.0/24 \
+  --service-cluster-ip-range=<%= @network_info['service_cluster_ip_range'] %> \
   --service-node-port-range=30000-32767 \
   --tls-cert-file=<%= scope.lookupvar('kube_common::conf_dir') %>/kubernetes.pem \
   --tls-private-key-file=<%= scope.lookupvar('kube_common::conf_dir') %>/kubernetes-key.pem \
